chore: fixed styles on mobile screen.

--- a/src/views/pages/home/sections/movies/genre-movies/home-genre-movies.module.css
+++ b/src/views/pages/home/sections/movies/genre-movies/home-genre-movies.module.css
@@ -9,13 +9,17 @@
     align-items: center;
     gap: 16px;
     padding-top: 40px;
-    padding-left: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
     padding-bottom: 32px;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 .genreButton {
-    width: 125px;
-    height: 46px;
+    min-width: 125px;
+    min-height: 46px;
     border: 0;
     display: flex;
     font-size: 18px;
